Initial Karma setup

--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   "homepage": "https://github.com/blunderboy/requestly",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-zipup": "~0.1.6"
+    "grunt-zipup": "~0.1.6",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5"
   }
 }
