--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Requestly",
 
-  "version": "3.1.1",
+  "version": "3.2.1",
   "manifest_version": 2,
-  "description": "Chrome Extension to modify HTTP requests (Redirect | Cancel | Replace)",
+  "description": "Chrome Extension to modify HTTP requests (Redirect | Cancel | Replace | Modify Headers)",
 
   "background": {
     "scripts": [
