--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Requestly",
-  "version": "3.1.1",
-  "description": "A Chrome extension to modify HTTP requests",
+  "version": "3.2.1",
+  "description": "Chrome extension to modify HTTP requests and modify request and response headers",
   "main": "app.js",
   "directories": {
     "doc": "docs"
