--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-zipup": "~0.1.6",
+    "grunt-contrib-handlebars": "~0.10.2",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
