Issue #77: Do not render rule list on localhost | Remove localhost entry from manifest

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "content_scripts": [
     {
-      "matches": [ "*://web.requestly.in/*", "*://localhost/*" ],
+      "matches": [ "*://web.requestly.in/*" ],
       "js": [
         "src/background/storageService.js",
 
