Issue #89: Integrate MDB JS in chrome extension

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
         "src/background/storageService.js",
 
         "src/libs/jquery-1.9.1.js",
+        "src/libs/bootstrap.min.js",
+        "src/libs/mdb.js",
+
         "src/libs/underscore-1.6.0.js",
         "src/libs/backbone-1.1.2.js",
         "src/libs/handlebars.runtime-v3.0.3.js",
