Issue #89: Modified manifest to remove localhost entry and added link for beta page

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "content_scripts": [
     {
-      "matches": [ "*://web.requestly.in/*", "*://localhost/index*" ],
+      "matches": [ "*://web.requestly.in/*" ], /* "*://localhost/*index*" */
       "js": [
         "src/background/storageService.js",
 
